# patchtriage

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml  deploy.yml
benchmarks/: aggregate.py  run_benchmark.sh  targets_eol.txt  targets_systems.txt
docs/: ARSENAL_ABSTRACT.md  BENCHMARKS-2026-07-11.md  BENCHMARKS-systems-2026-07-11.md  PATCHTRIAGE_SYSTEM_DESIGN_JA.md  PatchTriage_BlackHat_Europe_2026_Proposal.txt  PatchTriage_Note.txt  PatchTriage_Summary.txt  REPOSITORY_IMPORT.md  VALIDATION.md  demo.tape
src/patchtriage/: cli.py  config.py  context.py  dedup.py  evalcmp.py  fleet.py  models.py  org.py  plan.py  presentation.py  remediation.py  repository.py  repository_local.py  ssvc.py  targets.py  validation.py
src/patchtriage/data/: demo_assets.yaml  demo_epss.json  demo_kev.json  demo_nvd.json  ssvc_validation.json
src/patchtriage/data/fixtures/: trivy_sample.json
src/patchtriage/enrich/: clients.py  vendors.py
src/patchtriage/ingest/: parsers.py  sbom.py
src/patchtriage/report/: fleet.py  html.py
src/patchtriage/triage/: audit.py  engine.py  providers.py
src/patchtriage/webapp/: __init__.py  page.py  runner.py  server.py
tests/: test_accuracy_core.py  test_cache_isolation.py  test_config.py  test_enrichment_clients.py  test_fleet.py  test_pipeline.py  test_remediation.py  test_repository.py  test_repository_local.py  test_sbom.py  test_ssvc.py  test_target_artifacts.py  test_triage_backends.py  test_validation.py  test_vendor_advisories.py  test_web_enhancements.py  test_webapp.py
tests/fixtures/: grype_sample.json  sbom_cyclonedx.json  sbom_spdx.json
