[project]
name = "patchtriage"
version = "0.6.0"
description = "SSVC-based vulnerability prioritization with authoritative threat and vendor evidence"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = ["pydantic>=2.5", "httpx>=0.27", "typer>=0.12", "rich>=13.0", "pyyaml>=6.0", "packaging>=24.0"]

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
anthropic = ["anthropic>=0.40"]
dev = ["pytest>=8.0"]

[project.scripts]
patchtriage = "patchtriage.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
patchtriage = ["data/*.json", "data/*.yaml", "data/fixtures/*.json"]

[tool.pytest.ini_options]
markers = ["network: test requires network access"]
